--- a/jenkins-demo/jenkinsfile
+++ b/jenkins-demo/jenkinsfile
@@ -8,18 +8,18 @@ pipeline{
         }
         stage("compile"){
             steps{
-            sh "mvn clean compile"
+            bat "mvn clean compile"
             }
         }
         
          stage("package"){
             steps{
-            sh "mvn package"
+            bat "mvn package"
             }
         }
        
-        }
+        
     }
     }
    
-}
+
